# erpnext_mcp_server

./: .gitignore  INSTALL.md  README.md  biome.json  commands.py  commands_local.py  package.json  pyproject.toml  ruff.toml  test_client.py
.github/workflows/: ci.yml  release.yml
ai-chatbot-client/: package.json  tsconfig.app.json  vite.config.ts
ai-chatbot-client/src/: App.tsx  main.tsx  socket.js  socket.ts
ai-chatbot-terminal/: package.json  vite.config.js
erpnext_mcp_server/: __init__.py  boot.py  claude_integration.py  cli.py  debug_server.py  debug_site_path.py  hooks.py  install.py  mcp_server.py  modules.txt  test_client_stdio.py  test_init_methods.py
erpnext_mcp_server/api/: boot.py  diagnostic.py  endpoints.py  mcp_proxy.py  mcp_server.py  run_mcp_server.py  scheduled_tasks.py  socket_handler.py  tax_law_vector.py  terminal.py  terminal.py.backup  vue2_terminal.py  vue_terminal.py  websocket.py
erpnext_mcp_server/commands/: mcp_command.py  mcp_dev.py
erpnext_mcp_server/config/: erpnext_mcp_server.py
erpnext_mcp_server/handlers/: item_socketio_connector.py  mcp_terminal_socketio.py  socket_handlers.py
erpnext_mcp_server/locale/: main.pot  th.po
erpnext_mcp_server/mcp/: mcp.py  query_client.py  server.py  standalone_server.py
erpnext_mcp_server/mcp_ag2_example/: client_example.py  example.py  mcp_agent.py  mcp_client.py
erpnext_mcp_server/mcp_erpnext/: client.py  http_server.py  local_server.py  mcp.py  mcp_server.py  run_server.py  server.py.backup
erpnext_mcp_server/mcp_server_fetch/: __init__.py  __main__.py  server.py
erpnext_mcp_server/mcp_weather_client/: client.py
erpnext_mcp_server/mcp_weather_server/: weather.py
erpnext_mcp_server/multi_tool_agent/: agent.py
erpnext_mcp_server/realtime/: handlers.js
erpnext_mcp_server/setup/: mcp_setup.py
erpnext_mcp_server/tasks/: terminal_tokens.py
erpnext_mcp_server/utils/: mcp_server.py
realtime/: handlers.js
(+135 files in other folders)
