[project]
name = "erpnext_mcp_server"
authors = [
    { name = "Manot Luijiu", email = "moocoding@gmail.com"}
]
description = "ERPNext management, file operations, read-only database access, and ERPNext API integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "mcp[cli]",
    "python-dotenv",
    "openai",
    "ipykernel",
    "httpx",
    "docling"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
